
# this makes the executable out of my test_file and the 'gtest_all.cc' file

add_compile_options(${EXT_CXXFLAGS})


add_executable(test_lattice_parallel test_lattice_parallel.cpp)
target_link_libraries(test_lattice_parallel qdpxx_utils gtest_all mg_test mg ${EXT_LIBS})

add_executable(test_halo test_halo.cpp)
target_link_libraries(test_halo qdpxx_utils gtest_all mg_test mg ${EXT_LIBS})

add_executable(test_parallel_coarse_dslash test_parallel_coarse_dslash.cpp)
target_link_Libraries(test_parallel_coarse_dslash qdpxx_utils gtest_all mg_test mg ${EXT_LIBS})


add_test( NAME TestLatticeParallelT COMMAND mpirun -genvall -n 2 -host localhost ./test_lattice_parallel -geom 1 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS} )
add_test( NAME TestLatticeParallelZ COMMAND mpirun -genvall -n 2 -host localhost ./test_lattice_parallel -geom 1 1 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestLatticeParallelZT COMMAND mpirun -genvall -n 4 -host localhost ./test_lattice_parallel -geom 1 1 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestLatticeParallelY COMMAND mpirun -genvall -n 2 -host localhost ./test_lattice_parallel -geom 1 2 1 1 ${DEFAULT_QPHIX_TEST_ARGS} )
add_test( NAME TestLatticeParallelYT COMMAND mpirun -genvall -n 4 -host localhost ./test_lattice_parallel -geom 1 2 1 2 ${DEFAULT_QPHIX_TEST_ARGS} )
add_test( NAME TestLatticeParallelYZT COMMAND mpirun -genvall -n 8 -host localhost ./test_lattice_parallel -geom 1 2 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestLatticeParallelX COMMAND mpirun -genvall -n 2 -host localhost ./test_lattice_parallel -geom 2 1 1 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestLatticeParallelXT COMMAND mpirun -genvall -n 4 -host localhost ./test_lattice_parallel -geom 2 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestLatticeParallelXZT COMMAND mpirun -genvall -n 8 -host localhost ./test_lattice_parallel -geom 2 1 2 2 ${DEFAULT_QPHIX_TEST_ARGS} )
add_test( NAME TestLatticeParallelXYZT COMMAND mpirun -genvall -n 16 -host localhost ./test_lattice_parallel -geom 2 2 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestLatticeParallelT4 COMMAND mpirun -genvall -n 4 -host localhost ./test_lattice_parallel -geom 1 1 1 4 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloT COMMAND mpirun -genvall -n 2 -host localhost ./test_halo -geom 1 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloZ COMMAND mpirun -genvall -n 2 -host localhost  ./test_halo -geom 1 1 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloY COMMAND mpirun -genvall -n 2 -host localhost ./test_halo -geom 1 2 1 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloX COMMAND mpirun -genvall -n 2 -host localhost ./test_halo -geom 2 1 1 1 ${DEFAULT_QPHIX_TEST_ARGS} )
add_test( NAME TestHaloZT COMMAND mpirun -genvall -n 4 -host localhost  ./test_halo -geom 1 1 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloYT COMMAND mpirun -genvall -n 4 -host localhost ./test_halo -geom 1 2 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloXT COMMAND mpirun -genvall -n 4 -host localhost ./test_halo -geom 2 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloXZT COMMAND mpirun -genvall -n 8 -host localhost ./test_halo -geom 2 1 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloXYT COMMAND mpirun -genvall -n 8 -host localhost ./test_halo -geom 2 2 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestHaloXYZT COMMAND mpirun -genvall -n 16 -host localhost ./test_halo -geom 2 2 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashT COMMAND mpirun -genvall -n 2 -host localhost  ./test_parallel_coarse_dslash -geom 1 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashZ COMMAND mpirun -genvall -n 2 -host localhost ./test_parallel_coarse_dslash -geom 1 1 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashY COMMAND mpirun -genvall -n 2 -host localhost ./test_parallel_coarse_dslash -geom 1 2 1 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashX COMMAND mpirun -genvall -n 2 -host localhost ./test_parallel_coarse_dslash -geom 2 1 1 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashZT COMMAND mpirun -genvall -n 4 -host localhost ./test_parallel_coarse_dslash -geom 1 1 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashYT COMMAND mpirun -genvall -n 4 -host localhost ./test_parallel_coarse_dslash -geom 1 2 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashXT COMMAND mpirun -genvall -n 4 -host localhost ./test_parallel_coarse_dslash -geom 2 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashYZ COMMAND mpirun -genvall -n 4 -host localhost ./test_parallel_coarse_dslash -geom 1 2 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashXZ COMMAND mpirun -genvall -n 4 -host localhost ./test_parallel_coarse_dslash -geom 2 1 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashYZT COMMAND mpirun -genvall -n 8 -host localhost ./test_parallel_coarse_dslash -geom 1 2 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashXZT COMMAND mpirun -genvall -n 8 -host localhost ./test_parallel_coarse_dslash -geom 2 1 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestParallelDslashXYZT COMMAND mpirun -genvall -n 16 -host localhost ./test_parallel_coarse_dslash -geom 2 2 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME VCycleParallelT COMMAND mpirun -genvall -n 2  -host localhost ../test_vcycle -geom 1 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME VCycleParallelZ COMMAND mpirun -genvall -n 2 -host localhost ../test_vcycle -geom 1 1 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME VCycleParallelY COMMAND mpirun -genvall -n 2 -host localhost ../test_vcycle -geom 1 2 1 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME VCycleParallelX COMMAND mpirun -genvall -n 2 -host localhost  ../test_vcycle -geom 2 1 1 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME RecursiveVCycleParallel COMMAND mpirun -genvall -n 2 -host localhost  ../test_recursive_vcycle -geom 2 1 1 1 ${DEFAULT_QPHIX_TEST_ARGS})

# these tests take too long on my mac
#add_test( NAME VCycleParallelZT COMMAND mpirun -genvall -n 4 -host localhost ../test_vcycle -geom 1 1 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME VCycleParallelYT COMMAND mpirun -genvall -n 4 -host localhost  ../test_vcycle -geom 1 2 1 2 ${DEFAULT_QPHIX_TEST_ARGS} )
#add_test( NAME VCycleParallelXT COMMAND mpirun -genvall -n 4 -host localhost ../test_vcycle  -geom 2 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME VCycleParallelYZ COMMAND mpirun -genvall -n 4 -host localhost  ../test_vcycle  -geom 1 2 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME VCycleParallelXZ COMMAND mpirun -genvall -n 4 -host localhost  ../test_vcycle  -geom 2 1 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME VCycleParallelYZT COMMAND mpirun -genvall -n 8 -host localhost  ../test_vcycle  -geom 1 2 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME VCycleParallelXZT COMMAND mpirun -genvall -n 8 -host localhost  ../test_vcycle  -geom 2 1 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME VCycleParallelXYZT COMMAND mpirun -genvall -n 16 -host localhost  ../test_vcycle  -geom 2 2 2 2 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestEOBitsParallelT COMMAND mpirun -genvall -n 2 -host localhost  ../test_eo_bits -geom 1 1 1 2 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME TestEOBitsParallelZ COMMAND mpirun -genvall -n 2 -host localhost  ../test_eo_bits -geom 1 1 2 1 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME TestEOBitsParallelY COMMAND mpirun -genvall -n 2 -host localhost  ../test_eo_bits -geom 1 2 1 1 ${DEFAULT_QPHIX_TEST_ARGS})
#add_test( NAME TestEOBitsParallelX COMMAND mpirun -genvall -n 2 -host localhost  ../test_eo_bits -geom 2 1 1 1 ${DEFAULT_QPHIX_TEST_ARGS})
add_test( NAME TestEOBitsParallelT4 COMMAND mpirun -genvall -n 4 -host localhost  ../test_eo_bits -geom 1 1 1 4 ${DEFAULT_QPHIX_TEST_ARGS})


